--- a/src/app/pages/checkout/checkout.page.scss
+++ b/src/app/pages/checkout/checkout.page.scss
@@ -85,6 +85,7 @@ small {
 }
 
 .delivery-chip {
+  color: #262626;
   width: 100%;
   padding: 2px;
   font-size: 11px;
@@ -98,7 +99,7 @@ small {
   font-size: 11px;
   font-weight: 600;
   line-height: 1.25;
-  --border-color : #99cc33;
+  --border-color: #99cc33;
   --color: #262626 !important;
 }
 
