--- a/src/app/pages/product/product-search/product-search.component.html
+++ b/src/app/pages/product/product-search/product-search.component.html
@@ -17,6 +17,13 @@
           value="{{ keyword }}"
           #searchBar
         ></ion-searchbar>
+
+        <div
+          class="ion-no-padding ion-align-self-center ion-text-center scan-icon-container"
+          (click)="scanQR(); $event.stopPropagation()"
+        >
+          <img src="assets/images/scan.svg" class="scan-icon" />
+        </div>
       </ion-col>
       <ion-col size="2">
         <div (click)="showFilter()">
