--- a/src/app/pages/checkout/checkout.page.html
+++ b/src/app/pages/checkout/checkout.page.html
@@ -11,7 +11,7 @@
   <ion-grid class="ion-margin-top h-100">
     <ion-row class="ion-padding-bottom ion-padding-horizontal">
       <ion-col size="12">
-        <span><b>{{'DELIVERY_INFORMATION' | translate}}</b></span>
+        <span class="label-title"><b>{{'DELIVERY_INFORMATION' | translate}}</b></span>
       </ion-col>
     </ion-row>
     <ion-row class="ion-padding-horizontal">
@@ -33,8 +33,9 @@
     <ion-row class="ion-align-items-center ion-padding-horizontal">
       <ion-col size="6"><span class="text-address-info">{{'DELIVERY_LOCATION' | translate}}</span></ion-col>
       <ion-col size="6" class="ion-text-right">
-        <small class="link" [routerLink]="['/address']" [queryParams]="{mode: 'select'}">{{"CHANGE_DELIVERY_LOCATION" |
-          translate}}</small>
+        <small class="link delivery-location-btn" [routerLink]="['/address']" [queryParams]="{mode: 'select'}"
+          >{{"CHANGE_DELIVERY_LOCATION" | translate}}</small
+        >
       </ion-col>
       <ion-col size="12">
         <ion-text color="medium">
@@ -46,7 +47,7 @@
 
     <ion-row class="ion-padding">
       <ion-col size="12">
-        <span><b>{{'DELIVERY_NOTES' | translate}}</b></span>
+        <span class="label-title"><b>{{'DELIVERY_NOTES' | translate}}</b></span>
       </ion-col>
       <ion-col size="12" class="ion-no-padding">
         <ion-item lines="none" class="form-group" style="margin: 5px; --padding-start: 0">
@@ -57,14 +58,24 @@
     </ion-row>
 
     <ion-row class="ion-padding-horizontal">
-      <ion-col size="12"><span><b>{{'DELIVERY_TIME' | translate}}</b></span></ion-col>
+      <ion-col size="12"
+        ><span class="label-title"><b>{{'DELIVERY_TIME' | translate}}</b></span></ion-col
+      >
       <ion-col size="12">
         <fieldset class="radio-wrapper">
           <div>
-            <input class="radio-input" type="radio" name="delivery_time" [value]="false" [disabled]="!canDeliverNow"
-              (change)="radioChanged('deliver_now')" [checked]="canDeliverNow" />
-            <label class="radio-label" [ngClass]="{ 'text-muted' : !canDeliverNow }">{{'DELIVER_NOW' |
-              translate}}</label><br />
+            <input
+              class="radio-input"
+              type="radio"
+              name="delivery_time"
+              [value]="false"
+              [disabled]="!canDeliverNow"
+              (change)="radioChanged('deliver_now')"
+              [checked]="canDeliverNow"
+            />
+            <label class="radio-label" [ngClass]="{ 'text-muted' : !canDeliverNow }"
+              >{{'DELIVER_NOW' | translate}}</label
+            ><br />
             <div style="font-size: 11px; padding-left: 24px" *ngIf="!canDeliverNow">
               <span style="color: #f64740">{{'NOW_CLOSED' | translate}}</span>
               <span class="text-muted">
@@ -75,18 +86,35 @@
           <div>
             <ion-row class="ion-align-items-center">
               <ion-col size="6" class="ion-no-padding">
-                <input class="radio-input" type="radio" name="delivery_time" [value]="true"
-                  (change)="radioChanged('deliver_later')" [checked]="!canDeliverNow" />
+                <input
+                  class="radio-input"
+                  type="radio"
+                  name="delivery_time"
+                  [value]="true"
+                  (change)="radioChanged('deliver_later')"
+                  [checked]="!canDeliverNow"
+                />
                 <label class="radio-label">{{'SCHEDULE_FOR_LATER' | translate}}</label>
               </ion-col>
               <ion-col size="6" class="ion-text-right">
-                <ion-button class="btn-selected-date" expand="block" fill="outline" size="small"
-                  (click)="scheduleDatepicker.open()">
+                <ion-button
+                  class="btn-selected-date"
+                  expand="block"
+                  fill="outline"
+                  size="small"
+                  (click)="scheduleDatepicker.open()"
+                >
                   {{selectedDate ? (selectedDate | date:'E, MMMM d, y') : ('SELECT_DATE' | translate)}}
                 </ion-button>
-                <ion-datetime #scheduleDatepicker class="ion-hide" displayFormat="D MMMM YYYY"
-                  pickerFormat="D MMMM YYYY" [min]="currDate" [ngModel]="selectedDate"
-                  (ionChange)="onDateSelect($event.detail.value)"></ion-datetime>
+                <ion-datetime
+                  #scheduleDatepicker
+                  class="ion-hide"
+                  displayFormat="D MMMM YYYY"
+                  pickerFormat="D MMMM YYYY"
+                  [min]="currDate"
+                  [ngModel]="selectedDate"
+                  (ionChange)="onDateSelect($event.detail.value)"
+                ></ion-datetime>
               </ion-col>
             </ion-row>
           </div>
@@ -94,9 +122,14 @@
       </ion-col>
 
       <ion-col size="3" class="ion-no-padding ion-text-center" *ngFor="let time of timeList;let i = index">
-        <ion-chip class="delivery-chip" [color]="time.selected ? 'success': 'light'" [outline]="!time?.selected"
-          [ngClass]="{'date-selected' : time.selected }" [disabled]="(!selectedDate || !time?.active) || deliveryNow"
-          (click)="onTimeSelect(i)">
+        <ion-chip
+          class="delivery-chip"
+          [color]="time.selected ? 'success': 'light'"
+          [outline]="!time?.selected"
+          [ngClass]="{'date-selected' : time.selected }"
+          [disabled]="(!selectedDate || !time?.active) || deliveryNow"
+          (click)="onTimeSelect(i)"
+        >
           <span>{{time?.text}}</span>
         </ion-chip>
       </ion-col>
@@ -106,7 +139,7 @@
 
     <ion-row class="ion-padding-horizontal">
       <ion-col size="12">
-        <span><b>{{'ORDER_DETAIL' | translate}}</b></span>
+        <span class="label-title"><b>{{'ORDER_DETAIL' | translate}}</b></span>
       </ion-col>
       <ion-col size="12">
         <app-item-list [showSubstract]="false" [cartData]="cartList"></app-item-list>
@@ -116,7 +149,7 @@
 
     <ion-row class="ion-padding-horizontal">
       <ion-col size="12">
-        <span>
+        <span class="label-title">
           <b> {{'PAYMENT_SUMMARY' | translate}} </b>
         </span>
       </ion-col>
@@ -152,7 +185,7 @@
 
     <ion-row class="ion-padding-horizontal">
       <ion-col size="12">
-        <span>
+        <span class="label-title">
           <b> {{'VOUCHER' | translate}} </b>
         </span>
       </ion-col>
@@ -160,18 +193,30 @@
         <span class="text-payment-info">{{'SELECT_VOUCHER' |translate}}</span>
       </ion-col>
       <ion-col size="6" class="ion-text-right">
-        <ion-icon name="checkmark-outline" style="vertical-align: middle" color="success"
-          *ngIf="(voucher && voucher?.quota > 0) || voucherError"></ion-icon>
-        <ion-icon name="alert-outline" style="vertical-align: middle" color="warning"
-          *ngIf="(voucher && voucher?.quota <= 0) || voucherError"></ion-icon>
+        <ion-icon
+          name="checkmark-outline"
+          style="vertical-align: middle"
+          color="success"
+          *ngIf="(voucher && voucher?.quota > 0) || voucherError"
+        ></ion-icon>
+        <ion-icon
+          name="alert-outline"
+          style="vertical-align: middle"
+          color="warning"
+          *ngIf="(voucher && voucher?.quota <= 0) || voucherError"
+        ></ion-icon>
 
         <span [routerLink]="['/voucher']" class="link">
           <small *ngIf="!voucher || !voucher?.voucher_code"> {{'USE_VOUCHER' | translate}} </small>
           <span class="used-voucher" *ngIf="voucher?.voucher_code"> {{ voucher?.voucher_code | uppercase }} </span>
         </span>
 
-        <ion-icon name="close-outline" style="vertical-align: middle" *ngIf="voucher && voucher?.voucher_code"
-          (click)="removeVoucher()"></ion-icon>
+        <ion-icon
+          name="close-outline"
+          style="vertical-align: middle"
+          *ngIf="voucher && voucher?.voucher_code"
+          (click)="removeVoucher()"
+        ></ion-icon>
       </ion-col>
     </ion-row>
 
