--- a/src/app/shared/common/cards/card-product/card-product.component.scss
+++ b/src/app/shared/common/cards/card-product/card-product.component.scss
@@ -45,6 +45,12 @@
     overflow: hidden;
     text-overflow: ellipsis;
   }
+
+  &-discount {
+    font-size: 10px;
+    --color: white;
+    background-color: #f8a345;
+  }
 }
 
 .product-img {
@@ -60,12 +66,12 @@
 .disabled {
   opacity: 0.6;
 
-  &>.out-of-stock {
+  & > .out-of-stock {
     position: absolute;
     font-size: 10px;
     font-weight: 600;
     border-radius: 15px;
-    background-color: rgba(38,38,38,0.7);
+    background-color: rgba(38, 38, 38, 0.7);
     padding: 4px 1px;
     color: black;
     left: 0;
@@ -76,5 +82,57 @@
     color: white;
     text-align: center;
     text-transform: uppercase;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .product {
+    &-brand {
+      font-size: 10px;
+    }
+    &-name {
+      font-size: 12px;
+      font-weight: 700;
+      line-height: 1.07;
+      letter-spacing: normal;
+      color: #454545;
+    }
+    &-size {
+      font-size: 10px;
+      font-weight: normal;
+      line-height: 1.5;
+      color: #454545;
+      width: 95px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+    &-price {
+      font-size: 11px;
+      width: 95px;
+      font-weight: 700;
+      line-height: 3.4;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      vertical-align: super;
+      color: #f8a345;
+    }
+    &-final-price {
+      font-size: 13px;
+      font-weight: 700;
+      line-height: 1.3;
+      color: #99cc33;
+      width: 95px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    &-discount {
+      font-size: 9px;
+      --color: white;
+      background-color: #f8a345;
+    }
   }
 }
