Feature/minor UI adjustment (#97)
* feat(address): update address placholder

* feat(wording): klikgo wording titlecase update

* feat(share): share my app scrollable update

* feat(search): filter icon adjustment

* feat(general): remove general titlecase

--- a/src/app/pages/article/article-list/article-list.component.html
+++ b/src/app/pages/article/article-list/article-list.component.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start" mode="md" class="title">
       <ion-back-button icon="chevron-back" defaultHref="/tabs/inbox"></ion-back-button>
     </ion-buttons>
-    <ion-title> KlikGO Article </ion-title>
+    <ion-title> Klikgo Article </ion-title>
   </ion-toolbar>
 </ion-header>
 
