--- a/src/app/pages/product/product-search/product-search.component.scss
+++ b/src/app/pages/product/product-search/product-search.component.scss
@@ -3,6 +3,10 @@
   text-transform: capitalize;
 }
 
+.filter-icon {
+  font-size: 16px !important;
+}
+
 .custom-search {
   padding-left: 9px;
 }
@@ -10,5 +14,3 @@
 ion-header {
   border: none;
 }
-
-
