--- a/src/app/shared/common/cards/card-brand/card-brand.component.html
+++ b/src/app/shared/common/cards/card-brand/card-brand.component.html
@@ -6,7 +6,7 @@
         <img src="https://via.placeholder.com/80.png" class="brand-icon" *ngIf="!brand.image_url" />
       </ion-col>
       <ion-col size="12">
-        <ion-text class="brand-name">{{ brand.name | titlecase }}</ion-text>
+        <ion-text class="brand-name">{{ brand.name }}</ion-text>
       </ion-col>
     </ion-row>
   </ion-col>
