--- a/src/app/shared/common/cards/card-category/card-category.component.html
+++ b/src/app/shared/common/cards/card-category/card-category.component.html
@@ -6,7 +6,7 @@
         <img src="https://via.placeholder.com/50.png" class="cat-icon rounded" *ngIf="!category?.icon_url" />
       </ion-col>
       <ion-col size="12">
-        <ion-text class="category-name">{{ category?.name | titlecase }}</ion-text>
+        <ion-text class="category-name">{{ category?.name }}</ion-text>
       </ion-col>
     </ion-row>
   </ion-col>
