--- a/src/app/shared/common/cards/card-product/card-product.component.html
+++ b/src/app/shared/common/cards/card-product/card-product.component.html
@@ -17,7 +17,7 @@
     </ion-row> -->
     <ion-row>
       <ion-col class="height-ellipsis">
-        <ion-text class="product-name">{{ product?.name | titlecase }} </ion-text>
+        <ion-text class="product-name">{{ product?.name }} </ion-text>
       </ion-col>
     </ion-row>
     <ion-row>
