--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -13,7 +13,7 @@
             <ion-row class="ion-no-padding ion-align-items-center location-text">
               <ion-col size="12" size-sm size-md="5" size-lg="4" class="ion-no-padding truncate">
                 <ion-icon name="location" style="vertical-align: middle"></ion-icon>
-                <ion-text class="location-text"> KlikGo Cabang Denpasar - Bali </ion-text>
+                <ion-text class="location-text"> Klikgo Cabang Denpasar - Bali </ion-text>
               </ion-col>
             </ion-row>
           </ion-col>
