--- a/src/app/pages/product/product-search/product-search.component.html
+++ b/src/app/pages/product/product-search/product-search.component.html
@@ -26,9 +26,9 @@
         </div>
       </ion-col>
       <ion-col size="2">
-        <div (click)="showFilter()">
-          <ion-icon name="funnel" slot="start" class="header-action-size" size="medium"></ion-icon>
-          <ion-text class="header-action-size" size="medium"> {{ 'FILTER' | translate }} </ion-text>
+        <div (click)="showFilter()" class="ion-align-self-center">
+          <ion-icon name="funnel" slot="start" size="medium" class="filter-icon"></ion-icon>
+          <ion-text class="header-action-size"> {{ 'FILTER' | translate }} </ion-text>
         </div>
       </ion-col>
     </ion-row>
