--- a/src/app/pages/my-order/my-order-detail/my-order-detail.component.html
+++ b/src/app/pages/my-order/my-order-detail/my-order-detail.component.html
@@ -136,6 +136,18 @@
           <ion-text class="summary-value"> Rp. {{ order?.service_fee | number }} </ion-text>
         </ion-col>
       </ion-row>
+      <ion-row *ngIf="+order?.product_discount > 0">
+        <ion-col size="6">
+          <ion-text class="summary-label orange">
+            {{ 'SAVING' | translate }}
+          </ion-text>
+        </ion-col>
+        <ion-col size="6" class="ion-text-right">
+          <ion-text color="secondary" class="summary-value orange"
+            >- {{ order?.product_discount | currency: 'Rp. ':'symbol':'1.0-0' }}
+          </ion-text>
+        </ion-col>
+      </ion-row>
       <ion-row>
         <ion-col size="6">
           <ion-text class="summary-label">
@@ -164,7 +176,7 @@
         </ion-col>
         <ion-col size="6" class="ion-text-right">
           <ion-text color="success" class="summary-value green"
-            >- {{ order?.voucher_discount + order?.product_discount | currency: 'Rp. ':'symbol':'1.0-0' }}
+            >- {{ order?.voucher_discount | currency: 'Rp. ':'symbol':'1.0-0' }}
           </ion-text>
         </ion-col>
       </ion-row>
