Cut Off Phase 1 (#101)
* fix responsive on card product

* fix calculate price when date is changed

* add popover for delivery info on checkout page

* add on fetch on cod & manual transfer process button

* adjust search & scan icon

* feat(titlecase): remove brand, category, product titlecase

* change filter color icon on search page

* feat(maps-search): add input search

* fix rotation when upload profile picture

* chore(log): remove console log

* feat(gmap): update api key

* update popover text size

* reset time active when schedule changed

* fix delivery info text

* recall schedule api when change delivery

* remove outline from input focus

* change icon delivery info

* update toast text when price updated

* add handling push notification

* feat(brand): add conditional brand banner

* fix css voucher & datepicker

* Workaround modal

Co-authored-by: Indra Abdulah <indra.abdullah99@gmail.com>
Co-authored-by: Jason <jasonjaputra@gmail.com>

--- a/src/app/pages/checkout/checkout.page.html
+++ b/src/app/pages/checkout/checkout.page.html
@@ -74,8 +74,10 @@
               [checked]="canDeliverNow"
             />
             <label class="radio-label" [ngClass]="{ 'text-muted' : !canDeliverNow }"
-              >{{'DELIVER_NOW' | translate}}</label
-            ><br />
+              >{{'DELIVER_NOW' | translate}}
+            </label>
+            <ion-icon name="information-circle" color="success" (click)="presentDeliveryInfo('now')"></ion-icon>
+            <br />
             <div style="font-size: 11px; padding-left: 24px" *ngIf="!canDeliverNow">
               <span style="color: #f64740">{{'NOW_CLOSED' | translate}}</span>
               <span class="text-muted">
@@ -85,7 +87,7 @@
           </div>
           <div>
             <ion-row class="ion-align-items-center">
-              <ion-col size="6" class="ion-no-padding">
+              <ion-col size="7" class="ion-no-padding">
                 <input
                   class="radio-input"
                   type="radio"
@@ -95,8 +97,9 @@
                   [checked]="!canDeliverNow"
                 />
                 <label class="radio-label">{{'SCHEDULE_FOR_LATER' | translate}}</label>
+                <ion-icon name="information-circle" color="success" (click)="presentDeliveryInfo('later')"></ion-icon>
               </ion-col>
-              <ion-col size="6" class="ion-text-right">
+              <ion-col size="5" class="ion-text-right">
                 <ion-button
                   class="btn-selected-date"
                   expand="block"
