--- a/src/app/pages/payment/payment-cod/payment-cod.component.html
+++ b/src/app/pages/payment/payment-cod/payment-cod.component.html
@@ -56,8 +56,8 @@
 <ion-footer class="ion-no-border">
   <ion-row class="ion-padding">
     <ion-col>
-      <ion-button color="success" expand="block" shape="round" (click)="codForm.ngSubmit.emit()">
-        {{ 'PAY' | translate }}
+      <ion-button color="success" expand="block" shape="round" (click)="codForm.ngSubmit.emit()" [disabled]="isOnFetch">
+        {{ 'PAY' | translate }} <ion-spinner *ngIf="isOnFetch" name="dots" color="dark"></ion-spinner>
       </ion-button>
     </ion-col>
   </ion-row>
