--- a/src/app/pages/product/product-list/product-list.component.html
+++ b/src/app/pages/product/product-list/product-list.component.html
@@ -30,6 +30,11 @@
         <img [src]="category?.image_url" class="full-width img-header" />
       </ion-col>
     </ion-row>
+    <ion-row class="ion-no-padding" *ngIf="brandImage">
+      <ion-col class="ion-no-padding">
+        <img [src]="brandImage" class="full-width img-header" />
+      </ion-col>
+    </ion-row>
     <ion-row *ngIf="products && products.length">
       <ion-col class="ion-padding-horizontal" size="4" *ngFor="let item of products">
         <app-card-product [product]="item"></app-card-product>
