--- a/src/app/pages/checkout/checkout.page.scss
+++ b/src/app/pages/checkout/checkout.page.scss
@@ -116,7 +116,19 @@ small {
   color: var(--ion-color-secondary);
 }
 
-@media only screen and (max-width: 360px) {
+.delivery-info {
+  background-color: var(--ion-color-light);
+  color: white;
+  border-radius: 50%;
+  padding: 3px 6px;
+  font-size: 9px;
+}
+
+@media only screen and (max-width: 380px) {
+  .btn-selected-date {
+    font-size: 10px;
+  }
+
   .delivery-location-btn {
     font-size: 10px;
   }
