--- a/src/app/pages/payment/payment-instruction/payment-instruction.component.html
+++ b/src/app/pages/payment/payment-instruction/payment-instruction.component.html
@@ -38,8 +38,8 @@
 <ion-footer class="ion-no-border">
   <ion-row class="ion-padding">
     <ion-col>
-      <ion-button color="success" expand="block" shape="round" (click)="pay()">
-        {{ 'PAY' | translate }}
+      <ion-button color="success" expand="block" shape="round" (click)="pay()" [disabled]="isOnFetch">
+        {{ 'PAY' | translate }} <ion-spinner *ngIf="isOnFetch" name="dots" color="dark"></ion-spinner>
       </ion-button>
     </ion-col>
   </ion-row>
