--- a/src/app/pages/product/product-search/product-search.component.html
+++ b/src/app/pages/product/product-search/product-search.component.html
@@ -27,8 +27,8 @@
       </ion-col>
       <ion-col size="2">
         <div (click)="showFilter()" class="ion-align-self-center">
-          <ion-icon name="funnel" slot="start" size="medium" class="filter-icon"></ion-icon>
-          <ion-text class="header-action-size"> {{ 'FILTER' | translate }} </ion-text>
+          <ion-icon name="funnel" slot="start" size="medium" class="filter-icon" color="primary"></ion-icon>
+          <ion-text class="header-action-size" color="primary"> {{ 'FILTER' | translate }} </ion-text>
         </div>
       </ion-col>
     </ion-row>
