--- a/src/app/shared/common/modal-pin-location/modal-pin-location.component.scss
+++ b/src/app/shared/common/modal-pin-location/modal-pin-location.component.scss
@@ -22,7 +22,8 @@
   display: block;
   content: ' ';
   position: absolute;
-  top: 50%; left: 50%;
+  top: 50%;
+  left: 50%;
   margin: -40px 0 0 -11px;
   background: url('https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi_hdpi.png');
   background-size: 22px 40px; /* Since I used the HiDPI marker version this compensates for the 2x size */
@@ -51,6 +52,29 @@
   z-index: 1;
   top: 10px;
   left: 5px;
+}
+
+.map-search {
+  position: absolute;
+  z-index: 1;
+  top: 40px;
+  margin: auto;
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding: 0 15px 0 15px;
+
+  ion-input {
+    background: white;
+    border: 1px solid #d7dde0;
+    border-radius: 5px;
+
+    --placeholder-color: #353535 !important;
+  }
+
+  ion-input.has-focus {
+    outline: auto 1px #99cc33 !important;
+  }
 }
 
 .address-info {
