--- a/src/app/pages/checkout/checkout.page.html
+++ b/src/app/pages/checkout/checkout.page.html
@@ -110,7 +110,7 @@
                   size="small"
                   (click)="scheduleDatepicker.open()"
                 >
-                  {{selectedDate ? (selectedDate | date:'E, MMMM d, y') : ('SELECT_DATE' | translate)}}
+                  {{selectedDate ? (selectedDate | date:'mediumDate') : ('SELECT_DATE' | translate)}}
                 </ion-button>
                 <ion-datetime
                   #scheduleDatepicker
